@@ -104,7 +104,7 @@ try {
         $content_obj->SetPropertyValue('extra3',$pagedefaults['extra3']);
         $content_obj->SetAdditionalEditors($pagedefaults['addteditors']);
         $dflt_parent = (int) \cms_userprefs::get('default_parent');
-        $dflt_parent = max(-1,$dflt_parent);
+        if( $dflt_parent < 1 ) $dflt_parent = -1;
         if( !$this->CheckPermission('Modify Any Page') || !$this->CheckPermission('Manage All Content') ) {
             // we get the list of pages that this user has access to.
             // if he is not an editor of the default page, then we use the first page the user has access to, or -1
